<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".GreetingActivity">

    <ImageButton
        android:id="@+id/btnBorrar"
        android:layout_width="64dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:contentDescription="@string/desc_boton_borrar"
        android:foreground="@drawable/recycle_bin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_saludo"
        app:layout_constraintVertical_bias="0.683"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/lbl_saludo"
        android:layout_width="211dp"
        android:layout_height="72dp"
        android:fontFamily="@font/bangers"
        android:text="@string/lbl_greeting"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/lbl_btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/lbl_boton_borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrar"
        app:layout_constraintVertical_bias="0.099" />

    <ImageView
        android:id="@+id/imgSaludo"
        android:layout_width="333dp"
        android:layout_height="340dp"
        android:contentDescription="@string/desc_saludo"
        app:layout_constraintBottom_toTopOf="@+id/btnBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_saludo"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@drawable/goku"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>